RhaptosModuleEditor-0.84
  - Plone hotfix restricted attribute access to subobjects: convert property access to getProperty calls

RhaptosModuleEditor-0.83
  - data-* attribute support with proper URI

RhaptosModuleEditor-0.82
  - allow GoogleAnalyticsCode to pass to storage layer

RhaptosModuleEditor-0.81
  - modify publish to add additional check after templates, when posting

RhaptosModuleEditor-0.80.1
  - plug issue w/ putting content in pending w/o maintainer rights

RhaptosModuleEditor-0.80
  - added support for content specific licenses

RhaptosModuleEditor-0.79
  - clear out ccap printstyle on collection fork

RhaptosModuleEditor-0.78
  - enable withdraw button for manager view of pending content
  - bug fix for modern textbook preview

RhaptosModuleEditor-0.77
  - modern textbook appearance

RhaptosModuleEditor-0.76
  - publishContent now uses correct context

RhaptosModuleEditor-0.75
  - sword-service release

RhaptosModuleEditor-0.74.2
  - update google analytics domain code

RhaptosModuleEditor-0.74.1
  - automatically grant 'Publisher' to pending user, when manager publishes
  - missing author cleanups

RhaptosModuleEditor-0.74
  - implement new author first publish review
  - handle authors without member accounts

RhaptosModuleEditor-0.73
  - extended sword import support

RhaptosModuleEditor-0.72
  - Sprint-2011 bugfix

RhaptosModuleEditor-0.71
  - MathJax
  - Bugfix 2010: wrapping, empty language, wording fix

RhaptosModuleEditor-0.70
  - fix handling of checked out malformed 0.6 CNXML
  - hide logactions portlet for not-yet-new content

RhaptosModuleEditor-0.69
  - sword import support

RhaptosModuleEditor-0.68
  - various bugfixes

RhaptosModuleEditor-0.67
  - Google Analytics additions for downloads, make page-views async
 
RhaptosModuleEditor-0.66.1
  - Changed textarea/@wrap to "soft" instead of "on" for WebKit support.

RhaptosModuleEditor-0.66
  - generic setup refactor. Rhaptos 2.0 release

RhaptosModuleEditor-0.65